--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -1,4 +1,5 @@
 .sidebar-sidebar {
+  z-index: 20;
   height: 100%;
   position: fixed;
   transition: 0.2s cubic-bezier(0.4, 0, 0.2, 1);
